# Nova_Data_Test

./: .gitmodules  CMakeLists.txt  README.md  Rockets.json  nova-data-generator-log.txt  test_data.code-workspace
.github/workflows/: CI.yml
src/: Body.cpp  Body.h  CMakeLists.txt  Log.cpp  Log.h  Main.cpp  Parser.cpp  Parser.h  Simulation.cpp  Simulation.h  TestData.cpp  ThrustCurve.h
test/: CMakeLists.txt  Test.cpp
